# ImageContinuum

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
demo/: CMakeLists.txt
demo/include/: demo_app.h  game_layer.h
demo/include/common/: demo_pch.h
demo/res/: cornell_scene.toml  demo_assets.toml  demo_scene.toml
demo/res/configs/: clustered_forward.toml  clustered_forward_dx12.toml  forward.toml  forward_dx12.toml  path_traced.toml  path_traced_dx12.toml
demo/res/models/: CornellBox-Original.gltf  light_marker_cool.gltf  light_marker_green.gltf  light_marker_magenta.gltf  light_marker_warm.gltf
demo/res/models/bathroom_floor/: license.txt  scene.gltf
demo/res/pipelines/: clustered_forward.toml  forward.toml  forward_.toml  path_tracing.toml
demo/res/scene_files/: _stow  cornell_scene.toml  demo_scene.toml  skybox_scene.toml
demo/res/shaders/common/: brdf.hlsli  bvh.hlsli  clustered_forward.hlsli  ic_bindless.hlsli  ic_camera.hlsli  ic_materials.hlsli  ic_shader_common.hlsli  random.hlsli  ray_common.hlsli  scene_bindings.hlsli
demo/res/shaders/environment/: equirect_to_cubemap.hlsl  ibl_brdf_lut.hlsl  ibl_common.hlsli  ibl_irradiance.hlsl  ibl_prefilter.hlsl
demo/res/shaders/forward/: _compute_test_common.hlsli  build_hiz.hlsl  cluster_build.hlsl  cluster_light_cull.hlsl  clustered_forward_opaque.hlsl  depth_prepass.hlsl  forward_bindless.hlsl  gpu_frustum_cull.hlsl  gpu_occlusion_validate.hlsl  independent_compute_test.hlsl  reset_cluster_light_counter.hlsl  reset_visible_instance_count.hlsl  skybox.hlsl  visibility_test.hlsl
demo/res/shaders/global_illumination/: _gi_common.hlsli  _gi_ray_query_common.hlsli  gi_cache_initialize.hlsl  gi_evaluate.hlsl  gi_preserve_probes.hlsl  gi_prioritize_updates.hlsl  gi_surface_prepare.hlsl  gi_surfel_allocate.hlsl  gi_temporal_reconstruct.hlsl  gi_trace_surfel_updates.hlsl  gi_update_probes.hlsl
demo/res/shaders/path_tracer/: path_trace.hlsl  path_trace_tonemap.hlsl
demo/src/: demo_app.cpp  game_layer.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/ic/common/: ic_common.h  ic_fwd.h  ic_key_codes.h
engine/include/ic/core/: app_base.h  app_config.h  asset_manager.h  clock.h  coroutine_frame_pool.h  debug_gui_layer.h  event_frame_buffer.h  event_queue.h  events.h  frame.h  frame_context.h  frame_executor.h  frame_pipeline.h  job_system.h  layer_stack.h  task.h  thread_arena.h
engine/include/ic/core/frame_memory/: frame_memory_types.h  thread_arena.h
engine/include/ic/core/memory/: frame_arena.h  frame_arena_manager.h  frame_arena_region.h  frame_arena_storage.h  frame_memory_types.h
engine/include/ic/interface/: input.h  layer.h  window.h
engine/include/ic/platform/: glfw_context.h  glfw_input.h  glfw_window.h
engine/include/ic/renderer/: gpu_driven_submission.h  gpu_queue_profiler.h  gpu_scene_preparation.h  graphics_api.h  ibl_baker.h  pipeline_library.h  render_handles.h  render_pipeline.h  render_types.h  render_world.h  renderer.h  renderer_backend.h  renderer_diagnostics.h  renderer_gpu_assets.h  renderer_specification.h  renderer_types.h
engine/include/ic/renderer/dx12_backend/: dx12_acceleration_structure_provider.h  dx12_adapter.h  dx12_backend.h  dx12_barrier_util.h  dx12_command_system.h  dx12_descriptor_system.h  dx12_device.h  dx12_factory.h  dx12_frame_executor.h  dx12_gpu_profiler.h  dx12_gpu_scene.h  dx12_graph_resource_registry.h  dx12_offscreen_pass_recorder.h  dx12_pass_recorders.h  dx12_pipeline_manager.h  dx12_resource_allocator.h  dx12_retirement_queue.h  dx12_scene_pass_recorder.h  dx12_swapchain.h  dx12_upload_scheduler.h
engine/include/ic/renderer/frame_graph/: compiled_graph_plan.h  frame_graph.h  frame_graph_arena.h  frame_graph_builder.h  frame_graph_cache.h  frame_graph_compiler.h  frame_graph_executor.h  frame_graph_node.h  frame_graph_pass.h  frame_graph_types.h
engine/include/ic/renderer/global_illumination/: global_illumination.h  global_illumination_bindings.h
engine/include/ic/renderer/path_tracing/: path_trace_scene_builder.h  path_tracer_types.h
engine/include/ic/scene/: scene.h  scene_camera_controller_system.h  scene_components.h  scene_entity.h  scene_entity.inl  scene_manager.h  scene_render_view.h  scene_transform_system.h  scene_transform_utils.h  scene_types.h
engine/include/ic/util/: app_benchmark_utils.h  app_core_util.h  profiler.h  util.h
engine/include/image_continuum/common/: ic_common.h  ic_key_codes.h  ic_pch.h
engine/include/image_continuum/core/: app_base.h  event_bus.h  event_frame_buffer.h  event_queue.h  frame.h  frame_executor.h  layer_stack.h
engine/include/image_continuum/interface/: events.h  input.h  layer.h  renderer_backend.h  window.h
engine/include/image_continuum/platform/: glfw_context.h  glfw_input.h  glfw_window.h
engine/include/image_continuum/util/: profiler.h
engine/src/core/: app_base.cpp  event_bus.cpp  event_frame_buffer.cpp  event_queue.cpp  frame_executor.cpp  layer_stack.cpp
engine/src/ic/core/: app_base.cpp  app_config.cpp  asset_manager.cpp  debug_gui_layer.cpp  event_frame_buffer.cpp  event_queue.cpp  frame_executor.cpp  frame_pipeline.cpp  job_system.cpp  layer_stack.cpp
engine/src/ic/platform/: glfw_input.cpp  glfw_window.cpp
engine/src/ic/renderer/: gpu_queue_profiler.cpp  graphics_api.cpp  ibl_baker.cpp  pipeline_library.cpp  renderer.cpp  renderer_diagnostics.cpp  renderer_gpu_assets.cpp
engine/src/ic/scene/: scene.cpp  scene_camera_controller_system.cpp  scene_manager.cpp  scene_transform_system.cpp  scene_transform_utils.cpp
engine/src/ic/util/: app_benchmark_utils.cpp
engine/src/platform/: glfw_input.cpp  glfw_window.cpp
engine/src/platform/rendering/: graphics_api.cpp
tests/: CMakeLists.txt
tests/include/: frame_graph_resource_tests.h  global_illumination_tests.h  job_system_stress_tests.h  pass_dispatch_tests.h  ray_tracing_scene_tests.h
tests/include/common/: tests_pch.h
tests/src/: frame_graph_resource_tests.cpp  global_illumination_tests.cpp  job_system_stress_tests.cpp  main.cpp  pass_dispatch_tests.cpp  ray_tracing_scene_tests.cpp
(+86 files in other folders)
